# QReminder

./: CMakeLists.txt  CPackProjectConfig.cmake  README.md  main.cpp  main.qml  resources.qrc
android/: AndroidManifest.xml
android/res/drawable/: splashscreen.xml  splashscreen_land.xml  splashscreen_port.xml
docs/: BUILDING.md  FAQ.md
i18n/: qml_ja.ts  qml_vi.ts
images/: README.md
manynix/deb/: postinst  postrm
manynix/rpm/: post  postun
res/: description.txt
